Bug fixes
Driver: Many fixes/improvements
InvertedIndex: changed some of the declarations to accept TreeMaps
instead of HashMaps.
PrettyJsonWriter: Changed parameters to TreeMap instead of HashMap
WordIndex: changed functions to accept TreeMaps instead of HashMaps
General improvements throughout